added common error and response
