# backend/src/core/common/dto/express-error-response.dto.ts
@@ -1,0 +1,19 @@
+// dto/error-response.dto.ts
+import { ApiProperty } from '@nestjs/swagger';
+
+export class ErrorResponseDto {
+  @ApiProperty()
+  statusCode: number;
+
+  @ApiProperty()
+  message: string;
+
+  @ApiProperty()
+  error: string;
+
+  @ApiProperty()
+  timestamp: string;
+
+  @ApiProperty()
+  path: string;
+}
