# backend/src/core/common/types/express-error-response.interface.ts
@@ -1,0 +1,8 @@
+// interfaces/error-response.interface.ts
+export interface ErrorResponse {
+  statusCode: number;
+  message: string;
+  error: string;
+  timestamp: string;
+  path: string;
+}
