# backend/src/core/common/types/express-response.inerface.ts
@@ -1,0 +1,6 @@
+// interfaces/common-response.interface.ts
+export interface CommonResponse<T> {
+  statusCode: number;
+  data: T;
+  message: string;
+}
