# backend/src/interceptors/response.interceptor.ts
@@ -1,0 +1,28 @@
+// interceptors/response.interceptor.ts
+import {
+  CallHandler,
+  ExecutionContext,
+  Injectable,
+  NestInterceptor,
+} from '@nestjs/common';
+import { Observable } from 'rxjs';
+import { map } from 'rxjs/operators';
+import { CommonResponseDto } from '../core/common/dto/express-response.dto';
+
+@Injectable()
+export class ResponseInterceptor<T>
+  implements NestInterceptor<T, CommonResponseDto<T>>
+{
+  intercept(
+    context: ExecutionContext,
+    next: CallHandler,
+  ): Observable<CommonResponseDto<T>> {
+    return next.handle().pipe(
+      map((data) => ({
+        statusCode: context.switchToHttp().getResponse().statusCode,
+        message: 'Success',
+        data,
+      })),
+    );
+  }
+}
