# backend/src/modules/v1/auth/auth.controller.ts
@@ -5,29 +5,62 @@ import {
   HttpException,
   HttpStatus,
   Post,
+  Req,
   Res,
+  UseGuards,
 } from '@nestjs/common';
+import { ApiResponse } from '@nestjs/swagger';
+import { UserResponse } from '@supabase/supabase-js';
 import { Response } from 'express';
+import { ErrorResponseDto } from '../../../core/common/dto/express-error-response.dto';
+import { CommonResponseDto } from '../../../core/common/dto/express-response.dto';
+import { AuthenticatedRequest } from '../../../core/common/types/express-authenticated-request.interface';
+import { AuthorizationGuard } from '../../../guards/authorization.guard';
 import { AuthService } from './auth.service';
-import { SignUp } from './dto/signUp.dto';
+import { SignUpReqBody } from './dto/signUp.dto';
 
 @Controller('auth')
 export class AuthController {
   constructor(private readonly authService: AuthService) {}
 
   @Post()
+  @ApiResponse({
+    status: HttpStatus.CREATED,
+    description: 'User created successfully.',
+    type: CommonResponseDto<UserResponse['data']['user']>,
+  })
+  @ApiResponse({
+    status: HttpStatus.INTERNAL_SERVER_ERROR,
+    description: 'Internal Server Error',
+    type: ErrorResponseDto,
+  })
   async signUp(
-    @Body() body: SignUp,
+    @Body() body: SignUpReqBody,
     @Res({ passthrough: true }) response: Response,
-  ) {
+  ): Promise<CommonResponseDto<UserResponse['data']['user']>> {
     try {
-      console.log('hehe');
       const userData = await this.authService.createNewUser(
         body.email,
         body.password,
       );
 
-      response.cookie('CSIM_ACCESS_TOKEN', userData.session.access_token);
+      response.cookie(
+        'CSIM_ACCESS_TOKEN',
+        userData?.data?.session.access_token,
+        {
+          expires: new Date(userData?.data?.session.expires_at),
+        },
+      );
+      response.cookie(
+        'CSIM_REFRESH_TOKEN',
+        userData?.data?.session.refresh_token,
+      );
+
+      return {
+        statusCode: HttpStatus.CREATED,
+        data: userData.data.user,
+        message: 'User successfully created',
+      };
     } catch (error) {
       throw new HttpException(
         {
@@ -43,7 +76,22 @@ export class AuthController {
   }
 
   @Get()
-  async me() {
-    return false;
+  @UseGuards(AuthorizationGuard)
+  @ApiResponse({
+    status: HttpStatus.OK,
+    type: CommonResponseDto<UserResponse['data']['user']>,
+  })
+  @ApiResponse({
+    status: HttpStatus.INTERNAL_SERVER_ERROR,
+    type: ErrorResponseDto,
+  })
+  async me(
+    @Req() request: AuthenticatedRequest,
+  ): Promise<CommonResponseDto<UserResponse['data']['user']>> {
+    return {
+      message: 'User',
+      data: request.user,
+      statusCode: HttpStatus.OK,
+    };
   }
 }
